[seeds] refactored role-assignments to prepare for keystone stein readiness

--- a/openstack/benchmark/charts/benchmark-rally/templates/benchmark-rally-seed.yaml
+++ b/openstack/benchmark/charts/benchmark-rally/templates/benchmark-rally-seed.yaml
@@ -28,7 +28,7 @@ spec:
     - name: administrators
       users:
       - rally_admin
-      roles:
+      role_assignments:
       - project: rally
         role: admin
       - project: rally
@@ -43,7 +43,7 @@ spec:
         {{ range $i, $iterator :=  untilStep 1 (int (add1 .Values.rally_number_test_user)) 1 }}
         - rally_user_{{ $iterator }}
         {{ end }}
-      roles:
+      role_assignments:
       - project: rally
         role: member
 {{- end }}
