--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/project-canary-seed.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/project-canary-seed.yaml
@@ -17,7 +17,7 @@ spec:
 
     groups:
     - name: CC3TEST_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: test
         role: admin
       - project: test
@@ -45,7 +45,7 @@ spec:
 
     projects:
     - name: test
-      roles:
+      role_assignments:
       - user: {{.Values.global.openstack.users.admin.username}}
         role: admin
       - user: {{.Values.global.openstack.users.admin.username}}
