--- a/openstack/blackbox/charts/blackbox-tests-datapath/templates/project-datapath-seed.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-datapath/templates/project-datapath-seed.yaml
@@ -17,7 +17,7 @@ spec:
 
     groups:
     - name: CC3TEST_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: admin
         role: admin
       - project: admin
@@ -39,7 +39,7 @@ spec:
 
     projects:
     - name: admin
-      roles:
+      role_assignments:
       - user: {{.Values.global.openstack.users.admin.username}}
         role: admin
       - user: {{.Values.global.openstack.users.admin.username}}
