--- a/openstack/castellum/templates/seed.yaml
+++ b/openstack/castellum/templates/seed.yaml
@@ -25,14 +25,14 @@ spec:
         - name: castellum
           description: castellum Service
           password: {{ quote .Values.castellum.service_user.password }}
-          roles:
+          role_assignments:
             - project: service
               role:    service
 
     - name: ccadmin
       projects:
       - name: cloud_admin
-        roles:
+        role_assignments:
           - user: castellum@Default
             role: admin # to inspect Keystone projects and domains
           - user: castellum@Default
