--- a/openstack/cinder/templates/seed.yaml
+++ b/openstack/cinder/templates/seed.yaml
@@ -19,10 +19,10 @@ spec:
   - monsoon3/domain-wbs-seed
 
   roles:
-  - cloud_volume_admin
-  - volume_admin
-  - volume_viewer
-  - cloud_compute_admin
+  - name: cloud_volume_admin
+  - name: volume_admin
+  - name: volume_viewer
+  - name: cloud_compute_admin
 
   services:
   - name: cinderv2
@@ -61,20 +61,20 @@ spec:
     - name: cinder
       description: Cinder Service
       password: '{{.Values.global.cinder_service_password}}'
-      roles:
+      role_assignments:
       - project: service
         role: service
       - project: service
         role: cloud_volume_admin
     - name: admin
-      roles:
+      role_assignments:
       - project: admin
         role: cloud_volume_admin
       - domain: Default
         role: cloud_volume_admin
     groups:
     - name: administrators
-      roles:
+      role_assignments:
       - project: admin
         role: cloud_volume_admin
       - domain: Default
@@ -83,7 +83,7 @@ spec:
   - name: ccadmin
     projects:
     - name: cloud_admin
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_volume_admin
       # permission to enumerate all projects and domains
@@ -96,11 +96,11 @@ spec:
         role: cloud_compute_admin
     groups:
     - name: CCADMIN_CLOUD_ADMINS
-      roles:
+      role_assignments:
       - project: cloud_admin
         role: cloud_volume_admin
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - project: api_tools
@@ -109,7 +109,7 @@ spec:
         role: volume_admin
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - project: compute_tools
@@ -118,7 +118,7 @@ spec:
         role: volume_viewer
         inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - project: network_tools
@@ -127,7 +127,7 @@ spec:
         role: volume_viewer
         inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - project: storage_tools
@@ -136,7 +136,7 @@ spec:
         role: volume_admin
         inherited: true
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: ccadmin
@@ -146,35 +146,35 @@ spec:
   - name: bs
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: bs
         role: volume_admin
         inherited: true
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: bs
         role: volume_viewer
         inherited: true
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: bs
         role: volume_viewer
         inherited: true
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: bs
         role: volume_admin
         inherited: true
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: bs
@@ -184,35 +184,35 @@ spec:
   - name: cp
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: cp
         role: volume_admin
         inherited: true
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: cp
         role: volume_viewer
         inherited: true
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: cp
         role: volume_viewer
         inherited: true
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: cp
         role: volume_admin
         inherited: true
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: cp
@@ -222,35 +222,35 @@ spec:
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: fsn
         role: volume_admin
         inherited: true
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: fsn
         role: volume_viewer
         inherited: true
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: fsn
         role: volume_viewer
         inherited: true
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: fsn
         role: volume_admin
         inherited: true
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: fsn
@@ -260,35 +260,35 @@ spec:
   - name: hcm
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: hcm
         role: volume_admin
         inherited: true
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: hcm
         role: volume_viewer
         inherited: true
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: hcm
         role: volume_viewer
         inherited: true
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: hcm
         role: volume_admin
         inherited: true
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: hcm
@@ -298,35 +298,35 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: hcp03
         role: volume_admin
         inherited: true
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: hcp03
         role: volume_viewer
         inherited: true
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: hcp03
         role: volume_viewer
         inherited: true
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: hcp03
         role: volume_admin
         inherited: true
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: hcp03
@@ -336,35 +336,35 @@ spec:
   - name: hec
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: hec
         role: volume_admin
         inherited: true
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: hec
         role: volume_viewer
         inherited: true
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: hec
         role: volume_viewer
         inherited: true
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: hec
         role: volume_admin
         inherited: true
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: hec
@@ -374,40 +374,40 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: cc-demo
         role: volume_admin
 
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: monsoon3
         role: volume_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: monsoon3
         role: volume_viewer
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: monsoon3
         role: volume_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: monsoon3
         role: volume_admin
         inherited: true
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: monsoon3
@@ -417,35 +417,35 @@ spec:
   - name: neo
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: neo
         role: volume_admin
         inherited: true
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: neo
         role: volume_viewer
         inherited: true
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: neo
         role: volume_viewer
         inherited: true
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: neo
         role: volume_admin
         inherited: true
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: neo
@@ -455,35 +455,35 @@ spec:
   - name: s4
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: s4
         role: volume_admin
         inherited: true
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: s4
         role: volume_viewer
         inherited: true
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: s4
         role: volume_viewer
         inherited: true
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: s4
         role: volume_admin
         inherited: true
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: s4
@@ -493,35 +493,35 @@ spec:
   - name: wbs
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: volume_admin
       - domain: wbs
         role: volume_admin
         inherited: true
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: volume_admin
       - domain: wbs
         role: volume_viewer
         inherited: true
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: volume_admin
       - domain: wbs
         role: volume_viewer
         inherited: true
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: volume_admin
       - domain: wbs
         role: volume_admin
         inherited: true
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: volume_admin
       - domain: wbs
