--- a/openstack/content-repo/templates/seed.yaml
+++ b/openstack/content-repo/templates/seed.yaml
@@ -15,14 +15,14 @@ spec:
         - name: repo
           description: Repo Service User
           password: '{{ .Values.password }}'
-          roles:
+          role_assignments:
             - project: service
               role:    service
 
     - name: ccadmin
       projects:
       - name: master
-        roles:
+        role_assignments:
           # permission to write to ccadmin/master containers
           - user: repo@Default
             role: swiftoperator
