--- a/openstack/designate/templates/seeds.yaml
+++ b/openstack/designate/templates/seeds.yaml
@@ -29,15 +29,15 @@ spec:
 {{- end }}
 
   roles:
-  - cloud_dns_admin
-  - cloud_dns_ops
-  - cloud_dns_support
-  - dns_zonemaster
-  - dns_hostmaster
-  - dns_mailmaster
-  - dns_webmaster
-  - dns_admin
-  - dns_viewer
+  - name: cloud_dns_admin
+  - name: cloud_dns_ops
+  - name: cloud_dns_support
+  - name: dns_zonemaster
+  - name: dns_hostmaster
+  - name: dns_mailmaster
+  - name: dns_webmaster
+  - name: dns_admin
+  - name: dns_viewer
 
   services:
   - name: designate
@@ -58,7 +58,7 @@ spec:
   - name: Default
     groups:
     - name: administrators
-      roles:
+      role_assignments:
       - domain: Default
         role: cloud_dns_admin
       - domain: Default
@@ -68,7 +68,7 @@ spec:
         role: cloud_dns_admin
     users:
     - name: admin
-      roles:
+      role_assignments:
       - domain: Default
         role: cloud_dns_admin
       - domain: Default
@@ -79,18 +79,18 @@ spec:
     - name: designate
       description: Designate Service User
       password: {{ .Values.global.designate_service_password }}
-      roles:
+      role_assignments:
       - project: service
         role: service
 
   - name: ccadmin
     projects:
     - name: cloud_admin
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_dns_admin
     - name: master
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_dns_admin
       - user: designate@Default
@@ -109,42 +109,42 @@ spec:
         resource_id: '{{ .Values.pool_id }}'
     groups:
     - name: CCADMIN_CLOUD_ADMINS
-      roles:
+      role_assignments:
       - project: cloud_admin
         role: cloud_dns_admin
       - project: master
         role: cloud_dns_admin
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: master
         role: cloud_dns_ops
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: master
         role: cloud_dns_ops
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: master
         role: cloud_dns_ops
     - name: CCADMIN_MONITORING_USERS
-      roles:
+      role_assignments:
       - project: master
         role: dns_webmaster
     - name: CCADMIN_CLOUD_DNS_ADMINS
-      roles:
+      role_assignments:
       - project: master
         role: cloud_dns_admin
     - name: CCADMIN_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: cloud_dns_support
         inherited: true
     - name: CCADMIN_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -152,16 +152,16 @@ spec:
   - name: cc3test
     groups:
     - name: CC3TEST_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: cc3test
         role: cloud_dns_support
         inherited: true
     - name: CC3TEST_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: cc3test
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -169,16 +169,16 @@ spec:
   - name: bs
     groups:
     - name: BS_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: cloud_dns_support
         inherited: true
     - name: BS_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: bs
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -186,16 +186,16 @@ spec:
   - name: cp
     groups:
     - name: CP_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: cloud_dns_support
         inherited: true
     - name: CP_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: cp
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -203,16 +203,16 @@ spec:
   - name: fsn
     groups:
     - name: FSN_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: cloud_dns_support
         inherited: true
     - name: FSN_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: fsn
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -220,16 +220,16 @@ spec:
   - name: hcm
     groups:
     - name: HCM_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: cloud_dns_support
         inherited: true
     - name: HCM_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: hcm
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -237,16 +237,16 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: cloud_dns_support
         inherited: true
     - name: HCP03_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: hcp03
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -254,16 +254,16 @@ spec:
   - name: hec
     groups:
     - name: HEC_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: cloud_dns_support
         inherited: true
     - name: HEC_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: hec
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -271,16 +271,16 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: cloud_dns_support
         inherited: true
     - name: MONSOON3_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -288,16 +288,16 @@ spec:
   - name: neo
     groups:
     - name: NEO_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: cloud_dns_support
         inherited: true
     - name: NEO_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: neo
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -305,16 +305,16 @@ spec:
   - name: s4
     groups:
     - name: S4_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_dns_support
         inherited: true
     - name: S4_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -322,16 +322,16 @@ spec:
   - name: wbs
     groups:
     - name: WBS_DOMAIN_DNS_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: cloud_dns_support
         inherited: true
     - name: WBS_DOMAIN_DNS_OPS
-      roles:
+      role_assignments:
       - domain: wbs
         role: cloud_dns_ops
         inherited: true
-    roles:
+    role_assignments:
     - user: admin@Default
       role: cloud_dns_admin
       inherited: true
@@ -346,7 +346,7 @@ spec:
       zones: 1000
     projects:
     - name: tempest1
-      roles:
+      role_assignments:
         - user: admin@Default
           role: cloud_dns_admin
       dns_quota:
@@ -356,7 +356,7 @@ spec:
         zone_recordsets: 2000
         zones: 200
     - name: tempest2
-      roles:
+      role_assignments:
         - user: admin@Default
           role: cloud_dns_admin
       dns_quota:
@@ -367,13 +367,13 @@ spec:
         zones: 200
     users:
     - name: tempestuser1
-      roles:
+      role_assignments:
       - project: tempest1
         role: cloud_dns_ops
       - domain: tempest
         role: cloud_dns_ops
     - name: tempestuser2
-      roles:
+      role_assignments:
       - project: tempest2
         role: cloud_dns_ops
       - domain: tempest
