--- a/openstack/ironic/templates/seed.yaml
+++ b/openstack/ironic/templates/seed.yaml
@@ -25,11 +25,11 @@ spec:
   - swift/swift-seed
 
   roles:
-  - cloud_baremetal_admin
-  - baremetal_admin
-  - baremetal_viewer
-  - cloud_image_admin
-  - cloud_compute_admin
+  - name: cloud_baremetal_admin
+  - name: baremetal_admin
+  - name: baremetal_viewer
+  - name: cloud_image_admin
+  - name: cloud_compute_admin
 
   services:
   - name: ironic
@@ -245,7 +245,7 @@ spec:
     - name: {{ .Values.global.ironicServiceUser }}{{ .Values.global.user_suffix | default "" }}
       description: Ironic Service
       password: {{ .Values.global.ironic_service_password | default (tuple . .Values.global.ironicServiceUser | include "identity.password_for_user") | quote }}
-      roles:
+      role_assignments:
       - project: service
         role: service
       - project: service
@@ -266,22 +266,22 @@ spec:
   - name: tempest
     projects:
     - name: tempest1
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_baremetal_admin
     - name: tempest2
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_baremetal_admin
     users:
     - name: tempestuser1
-      roles:
+      role_assignments:
       - project: tempest1
         role: baremetal_admin
       - domain: tempest
         role: baremetal_admin
     - name: tempestuser2
-      roles:
+      role_assignments:
       - project: tempest2
         role: baremetal_admin
       - domain: tempest
@@ -291,7 +291,7 @@ spec:
   - name: ccadmin
     projects:
     - name: master
-      roles:
+      role_assignments:
       - user: image-build@Default
         role: cloud_baremetal_admin
       - user: ipmi_exporter@Default
@@ -300,13 +300,13 @@ spec:
         role: cloud_compute_admin
     groups:
     - name: CCADMIN_CLOUD_ADMINS
-      roles:
+      role_assignments:
       - project: master
         role: cloud_baremetal_admin
       - project: cloud_admin
         role: cloud_baremetal_admin
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - project: api_tools
@@ -315,7 +315,7 @@ spec:
         role: baremetal_admin
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - project: compute_tools
@@ -328,7 +328,7 @@ spec:
         role: baremetal_admin
         inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - project: network_tools
@@ -337,7 +337,7 @@ spec:
         role: baremetal_viewer
         inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - project: storage_tools
@@ -346,7 +346,7 @@ spec:
         role: baremetal_viewer
         inherited: true
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: ccadmin
@@ -356,35 +356,35 @@ spec:
   - name: bs
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: bs
         role: baremetal_admin
         inherited: true
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: bs
         role: baremetal_admin
         inherited: true
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: bs
         role: baremetal_viewer
         inherited: true
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: bs
         role: baremetal_viewer
         inherited: true
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: bs
@@ -394,35 +394,35 @@ spec:
   - name: cp
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: cp
         role: baremetal_admin
         inherited: true
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: cp
         role: baremetal_admin
         inherited: true
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: cp
         role: baremetal_viewer
         inherited: true
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: cp
         role: baremetal_viewer
         inherited: true
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: cp
@@ -432,35 +432,35 @@ spec:
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: fsn
         role: baremetal_admin
         inherited: true
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: fsn
         role: baremetal_admin
         inherited: true
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: fsn
         role: baremetal_viewer
         inherited: true
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: fsn
         role: baremetal_viewer
         inherited: true
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: fsn
@@ -470,35 +470,35 @@ spec:
   - name: hcm
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: hcm
         role: baremetal_admin
         inherited: true
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: hcm
         role: baremetal_admin
         inherited: true
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: hcm
         role: baremetal_viewer
         inherited: true
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: hcm
         role: baremetal_viewer
         inherited: true
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: hcm
@@ -508,35 +508,35 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: hcp03
         role: baremetal_admin
         inherited: true
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: hcp03
         role: baremetal_admin
         inherited: true
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: hcp03
         role: baremetal_viewer
         inherited: true
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: hcp03
         role: baremetal_viewer
         inherited: true
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: hcp03
@@ -546,35 +546,35 @@ spec:
   - name: hec
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: hec
         role: baremetal_admin
         inherited: true
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: hec
         role: baremetal_admin
         inherited: true
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: hec
         role: baremetal_viewer
         inherited: true
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: hec
         role: baremetal_viewer
         inherited: true
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: hec
@@ -584,39 +584,39 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: cc-demo
         role: baremetal_admin
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: monsoon3
         role: baremetal_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: monsoon3
         role: baremetal_admin
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: monsoon3
         role: baremetal_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: monsoon3
         role: baremetal_viewer
         inherited: true
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: monsoon3
@@ -626,35 +626,35 @@ spec:
   - name: neo
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: neo
         role: baremetal_admin
         inherited: true
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: neo
         role: baremetal_admin
         inherited: true
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: neo
         role: baremetal_viewer
         inherited: true
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: neo
         role: baremetal_viewer
         inherited: true
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: neo
@@ -664,42 +664,42 @@ spec:
   - name: s4
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: s4
         role: baremetal_admin
         inherited: true
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: s4
         role: baremetal_admin
         inherited: true
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: s4
         role: baremetal_viewer
         inherited: true
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: s4
         role: baremetal_viewer
         inherited: true
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: s4
         role: baremetal_viewer
         inherited: true
     - name: S4_CFM_ADMINS
-      roles:
+      role_assignments:
       - domain: s4
         role: cloud_baremetal_admin
         inherited: true
@@ -707,35 +707,35 @@ spec:
   - name: wbs
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: baremetal_admin
       - domain: wbs
         role: baremetal_admin
         inherited: true
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: baremetal_admin
       - domain: wbs
         role: baremetal_admin
         inherited: true
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: baremetal_admin
       - domain: wbs
         role: baremetal_viewer
         inherited: true
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: baremetal_admin
       - domain: wbs
         role: baremetal_viewer
         inherited: true
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: baremetal_admin
       - domain: wbs
