--- a/openstack/limes/templates/seed.yaml
+++ b/openstack/limes/templates/seed.yaml
@@ -30,11 +30,11 @@ spec:
   - monsoon3/domain-wbs-seed
 
   roles:
-    - cloud_resource_admin
-    - cloud_resource_viewer
-    - resource_admin
-    - resource_viewer
-    - resource_service
+    - name: cloud_resource_admin
+    - name: cloud_resource_viewer
+    - name: resource_admin
+    - name: resource_viewer
+    - name: resource_service
 
   services:
     - name:        limes
@@ -57,14 +57,14 @@ spec:
         - name: limes
           description: Limes Service
           password: '{{.Values.limes.clusters.ccloud.auth.password}}'
-          roles:
+          role_assignments:
             - project: service
               role:    service
 
     - name: ccadmin
       projects:
       - name: cloud_admin
-        roles:
+        role_assignments:
           # permission to enumerate all projects and domains
           - user: limes@Default
             role: admin
@@ -91,87 +91,87 @@ spec:
             role: cloud_image_admin
       groups:
       - name: CCADMIN_CLOUD_ADMINS
-        roles:
+        role_assignments:
         - project: cloud_admin
           role: cloud_resource_admin
       - name: CCADMIN_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: ccadmin
           role: resource_admin
 
     - name: bs
       groups:
       - name: BS_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: bs
           role: resource_admin
 
     - name: cc3test
       groups:
       - name: CC3TEST_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: cc3test
           role: resource_admin
 
     - name: cp
       groups:
       - name: CP_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: cp
           role: resource_admin
 
     - name: fsn
       groups:
       - name: FSN_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: fsn
           role: resource_admin
 
     - name: hcm
       groups:
       - name: HCM_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: hcm
           role: resource_admin
 
     - name: hcp03
       groups:
       - name: HCP03_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: hcp03
           role: resource_admin
 
     - name: hec
       groups:
       - name: HEC_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: hec
           role: resource_admin
 
     - name: monsoon3
       groups:
       - name: MONSOON3_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: monsoon3
           role: resource_admin
 
     - name: neo
       groups:
       - name: NEO_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: neo
           role: resource_admin
     - name: s4
       groups:
       - name: S4_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: s4
           role: resource_admin
 
     - name: wbs
       groups:
       - name: WBS_DOMAIN_RESOURCE_ADMINS
-        roles:
+        role_assignments:
         - domain: wbs
           role: resource_admin
 
