--- a/openstack/limes/templates/support_seed.yaml
+++ b/openstack/limes/templates/support_seed.yaml
@@ -17,7 +17,7 @@ spec:
     - name: {{ . | lower }}
       groups:
       - name: {{ . | upper }}_API_SUPPORT
-        roles:
+        role_assignments:
         - project: api_support
           role: resource_admin
         {{- if eq . "ccadmin" }}
@@ -29,7 +29,7 @@ spec:
           role: resource_viewer
           inherited: true
       - name: {{ . | upper }}_COMPUTE_SUPPORT
-        roles:
+        role_assignments:
         - project: compute_support
           role: resource_admin
         {{- if eq . "ccadmin" }}
@@ -41,7 +41,7 @@ spec:
           role: resource_viewer
           inherited: true
       - name: {{ . | upper }}_NETWORK_SUPPORT
-        roles:
+        role_assignments:
         - project: network_support
           role: resource_admin
         {{- if eq . "ccadmin" }}
@@ -53,7 +53,7 @@ spec:
           role: resource_viewer
           inherited: true
       - name: {{ . | upper }}_STORAGE_SUPPORT
-        roles:
+        role_assignments:
         - project: storage_support
           role: resource_admin
         {{- if eq . "ccadmin" }}
@@ -65,7 +65,7 @@ spec:
           role: resource_viewer
           inherited: true
       - name: {{ . | upper }}_SERVICE_DESK
-        roles:
+        role_assignments:
         - project: service_desk
           role: resource_admin
         # Inherit read-only role within domain
