--- a/openstack/maia/templates/seed.yaml
+++ b/openstack/maia/templates/seed.yaml
@@ -22,8 +22,8 @@ spec:
   - monsoon3/domain-wbs-seed
 
   roles:
-  - monitoring_viewer
-  - monitoring_admin
+  - name: monitoring_viewer
+  - name: monitoring_admin
 
   services:
   - name: maia
@@ -40,14 +40,14 @@ spec:
     - name: {{.Values.maia.service_user.name}}
       description: 'Maia API User'
       password: {{ .Values.maia.service_user.password | quote }}
-      roles:
+      role_assignments:
       - project: {{.Values.maia.service_user.project_name}}
         role: service
 
   - name: ccadmin
     projects:
     - name: master
-      roles:
+      role_assignments:
       - group: CCADMIN_CLOUD_ADMINS
         role: monitoring_admin
       - group: CCADMIN_DOMAIN_ADMINS
@@ -56,7 +56,7 @@ spec:
         role: monitoring_viewer
     groups:
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - project: api_tools
@@ -65,7 +65,7 @@ spec:
         role: monitoring_admin
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - project: compute_tools
@@ -74,7 +74,7 @@ spec:
         role: monitoring_viewer
         inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - project: network_tools
@@ -83,7 +83,7 @@ spec:
         role: monitoring_viewer
         inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - project: storage_tools
@@ -92,7 +92,7 @@ spec:
         role: monitoring_viewer
         inherited: true
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: ccadmin
@@ -102,35 +102,35 @@ spec:
   - name: bs
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: bs
         role: monitoring_admin
         inherited: true
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: bs
         role: monitoring_viewer
         inherited: true
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: bs
         role: monitoring_viewer
         inherited: true
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: bs
         role: monitoring_viewer
         inherited: true
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: bs
@@ -140,35 +140,35 @@ spec:
   - name: cp
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: cp
         role: monitoring_admin
         inherited: true
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: cp
         role: monitoring_viewer
         inherited: true
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: cp
         role: monitoring_viewer
         inherited: true
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: cp
         role: monitoring_viewer
         inherited: true
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: cp
@@ -178,35 +178,35 @@ spec:
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: fsn
         role: monitoring_admin
         inherited: true
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: fsn
         role: monitoring_viewer
         inherited: true
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: fsn
         role: monitoring_viewer
         inherited: true
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: fsn
         role: monitoring_viewer
         inherited: true
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: fsn
@@ -216,35 +216,35 @@ spec:
   - name: hcm
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: hcm
         role: monitoring_admin
         inherited: true
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: hcm
         role: monitoring_viewer
         inherited: true
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: hcm
         role: monitoring_viewer
         inherited: true
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: hcm
         role: monitoring_viewer
         inherited: true
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: hcm
@@ -254,35 +254,35 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: hcp03
         role: monitoring_admin
         inherited: true
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: hcp03
         role: monitoring_viewer
         inherited: true
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: hcp03
         role: monitoring_viewer
         inherited: true
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: hcp03
         role: monitoring_viewer
         inherited: true
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: hcp03
@@ -292,35 +292,35 @@ spec:
   - name: hec
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: hec
         role: monitoring_admin
         inherited: true
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: hec
         role: monitoring_viewer
         inherited: true
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: hec
         role: monitoring_viewer
         inherited: true
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: hec
         role: monitoring_viewer
         inherited: true
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: hec
@@ -330,35 +330,35 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: monsoon3
         role: monitoring_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: monsoon3
         role: monitoring_viewer
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: monsoon3
         role: monitoring_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: monsoon3
         role: monitoring_viewer
         inherited: true
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: monsoon3
@@ -368,35 +368,35 @@ spec:
   - name: neo
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: neo
         role: monitoring_admin
         inherited: true
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: neo
         role: monitoring_viewer
         inherited: true
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: neo
         role: monitoring_viewer
         inherited: true
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: neo
         role: monitoring_viewer
         inherited: true
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: neo
@@ -406,35 +406,35 @@ spec:
   - name: s4
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: s4
         role: monitoring_admin
         inherited: true
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: s4
         role: monitoring_viewer
         inherited: true
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: s4
         role: monitoring_viewer
         inherited: true
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: s4
         role: monitoring_viewer
         inherited: true
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: s4
@@ -444,35 +444,35 @@ spec:
   - name: wbs
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: monitoring_admin
       - domain: wbs
         role: monitoring_admin
         inherited: true
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: monitoring_admin
       - domain: wbs
         role: monitoring_viewer
         inherited: true
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: monitoring_admin
       - domain: wbs
         role: monitoring_viewer
         inherited: true
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: monitoring_admin
       - domain: wbs
         role: monitoring_viewer
         inherited: true
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: monitoring_admin
       - domain: wbs
@@ -482,7 +482,7 @@ spec:
   - name: cc3test
     groups:
     - name: CC3TEST_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: admin
         role: monitoring_admin
 
