--- a/openstack/octobus/templates/seeds.yaml
+++ b/openstack/octobus/templates/seeds.yaml
@@ -36,7 +36,7 @@ spec:
       #  type: PRIMARY
       #  ttl: 7200
       #  description: Octobus productive domain.
-      roles:
+      role_assignments:
       - user: {{ .Values.technicalUserPerRegion }}
         role: admin
       - user: {{ .Values.technicalUserPerRegion }}
@@ -66,7 +66,7 @@ spec:
 
     groups:
     - name: CCADMIN_OCTOBUS-ADM
-      roles:
+      role_assignments:
       - project: octobus
         role: admin
       - project: octobus
@@ -94,7 +94,7 @@ spec:
       - project: octobus
         role: automation_admin
     - name: CCADMIN_OCTOBUS-MEMBER
-      roles:
+      role_assignments:
       - project: octobus
         role: audit_viewer
       - project: octobus
