--- a/openstack/tempest/designate-tempest/templates/seed.yaml
+++ b/openstack/tempest/designate-tempest/templates/seed.yaml
@@ -21,7 +21,7 @@ spec:
       zones: 1000
     projects:
     - name: tempest1
-      roles:
+      role_assignments:
         - user: admin@Default
           role: cloud_dns_admin
       dns_quota:
@@ -31,7 +31,7 @@ spec:
         zone_recordsets: 2000
         zones: 200
     - name: tempest2
-      roles:
+      role_assignments:
         - user: admin@Default
           role: cloud_dns_admin
       dns_quota:
@@ -42,13 +42,13 @@ spec:
         zones: 200
     users:
     - name: tempestuser1
-      roles:
+      role_assignments:
       - project: tempest1
         role: cloud_dns_ops
       - domain: tempest
         role: cloud_dns_ops
     - name: tempestuser2
-      roles:
+      role_assignments:
       - project: tempest2
         role: cloud_dns_ops
       - domain: tempest
