--- a/openstack/tempest/manila-tempest/templates/seed.yaml
+++ b/openstack/tempest/manila-tempest/templates/seed.yaml
@@ -14,7 +14,7 @@ spec:
   - name: tempest
     projects:
     - name: admin
-      roles:
+      role_assignments:
         - user: admin
           role: cloud_sharedfilesystem_admin
         - user: admin
@@ -22,16 +22,16 @@ spec:
         - user: admin@Default
           role: cloud_sharedfilesystem_admin
     - name: tempest1
-      roles:
+      role_assignments:
         - user: admin@Default
           role: cloud_sharedfilesystem_admin
     - name: tempest2
-      roles:
+      role_assignments:
         - user: admin@Default
           role: cloud_sharedfilesystem_admin
     users:
     - name: tempestuser1
-      roles:
+      role_assignments:
       - project: tempest1
         role: sharedfilesystem_admin
       - project: tempest1
@@ -39,7 +39,7 @@ spec:
       - domain: tempest
         role: sharedfilesystem_admin
     - name: tempestuser2
-      roles:
+      role_assignments:
       - project: tempest2
         role: sharedfilesystem_admin
       - project: tempest2
