--- a/openstack/tempest/neutron-tempest/templates/seed.yaml
+++ b/openstack/tempest/neutron-tempest/templates/seed.yaml
@@ -74,7 +74,7 @@ spec:
       - neutron-tempestadmin2
       - neutron-tempestadmin3
       - neutron-tempestadmin4
-      roles:
+      role_assignments:
       - project: neutron-tempest-admin1
         role: admin
       - project: service
@@ -152,7 +152,7 @@ spec:
     - name: neutron-tempestadmin1
       description: Neutron Tempest Administrator 1
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest-admin1
         role: member
       - project: neutron-tempest-admin1
@@ -312,7 +312,7 @@ spec:
     - name: neutron-tempestadmin2
       description: Neutron Tempest Administrator 2
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest-admin1
         role: member
       - project: neutron-tempest-admin1
@@ -472,7 +472,7 @@ spec:
     - name: neutron-tempestadmin3
       description: Neutron Tempest Administrator 3
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest-admin1
         role: member
       - project: neutron-tempest-admin1
@@ -632,7 +632,7 @@ spec:
     - name: neutron-tempestadmin4
       description: Neutron Tempest Administrator 4
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest-admin1
         role: member
       - project: neutron-tempest-admin1
@@ -792,7 +792,7 @@ spec:
     - name: neutron-tempestuser1
       description: Neutron Tempest Test User 1
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest1
         role: admin
       - project: neutron-tempest1
@@ -806,7 +806,7 @@ spec:
     - name: neutron-tempestuser2
       description: Neutron Tempest Test User 2
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest2
         role: admin
       - project: neutron-tempest2
@@ -820,7 +820,7 @@ spec:
     - name: neutron-tempestuser3
       description: Neutron Tempest Test User 3
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest3
         role: admin
       - project: neutron-tempest3
@@ -834,7 +834,7 @@ spec:
     - name: neutron-tempestuser4
       description: Neutron Tempest Test User 4
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest4
         role: admin
       - project: neutron-tempest4
@@ -848,7 +848,7 @@ spec:
     - name: neutron-tempestuser5
       description: Neutron Tempest Test User 5
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest5
         role: admin
       - project: neutron-tempest5
@@ -862,7 +862,7 @@ spec:
     - name: neutron-tempestuser6
       description: Neutron Tempest Test User 6
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest6
         role: admin
       - project: neutron-tempest6
@@ -876,7 +876,7 @@ spec:
     - name: neutron-tempestuser7
       description: Neutron Tempest Test User 7
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest7
         role: admin
       - project: neutron-tempest7
@@ -890,7 +890,7 @@ spec:
     - name: neutron-tempestuser8
       description: Neutron Tempest Test User 8
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest8
         role: admin
       - project: neutron-tempest8
@@ -904,7 +904,7 @@ spec:
     - name: neutron-tempestuser9
       description: Neutron Tempest Test User 9
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest9
         role: admin
       - project: neutron-tempest9
@@ -918,7 +918,7 @@ spec:
     - name: neutron-tempestuser10
       description: Neutron Tempest Test User 10
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: neutron-tempest10
         role: admin
       - project: neutron-tempest10
