--- a/openstack/tempest/nova-tempest/templates/seed.yaml
+++ b/openstack/tempest/nova-tempest/templates/seed.yaml
@@ -230,7 +230,7 @@ spec:
       - nova-tempestadmin6
       - nova-tempestadmin7
       - nova-tempestadmin8
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: admin
       - project: service
@@ -376,7 +376,7 @@ spec:
     - name: nova-tempestadmin1
       description: nova Tempest Administrator 1
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -724,7 +724,7 @@ spec:
     - name: nova-tempestadmin2
       description: nova Tempest Administrator 2
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -1072,7 +1072,7 @@ spec:
     - name: nova-tempestadmin3
       description: nova Tempest Administrator 3
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -1420,7 +1420,7 @@ spec:
     - name: nova-tempestadmin4
       description: nova Tempest Administrator 4
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -1768,7 +1768,7 @@ spec:
     - name: nova-tempestadmin5
       description: nova Tempest Administrator 5
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -2116,7 +2116,7 @@ spec:
     - name: nova-tempestadmin6
       description: nova Tempest Administrator 6
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -2464,7 +2464,7 @@ spec:
     - name: nova-tempestadmin7
       description: nova Tempest Administrator 7
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -2812,7 +2812,7 @@ spec:
     - name: nova-tempestadmin8
       description: nova Tempest Administrator 8
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest-admin1
         role: member
       - project: nova-tempest-admin1
@@ -3160,7 +3160,7 @@ spec:
     - name: nova-tempestuser1
       description: nova Tempest Test User 1
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest1
         role: admin
       - project: nova-tempest1
@@ -3176,7 +3176,7 @@ spec:
     - name: nova-tempestuser2
       description: nova Tempest Test User 2
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest2
         role: admin
       - project: nova-tempest2
@@ -3192,7 +3192,7 @@ spec:
     - name: nova-tempestuser3
       description: nova Tempest Test User 3
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest3
         role: admin
       - project: nova-tempest3
@@ -3208,7 +3208,7 @@ spec:
     - name: nova-tempestuser4
       description: nova Tempest Test User 4
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest4
         role: admin
       - project: nova-tempest4
@@ -3224,7 +3224,7 @@ spec:
     - name: nova-tempestuser5
       description: nova Tempest Test User 5
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest5
         role: admin
       - project: nova-tempest5
@@ -3240,7 +3240,7 @@ spec:
     - name: nova-tempestuser6
       description: nova Tempest Test User 6
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest6
         role: admin
       - project: nova-tempest6
@@ -3256,7 +3256,7 @@ spec:
     - name: nova-tempestuser7
       description: nova Tempest Test User 7
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest7
         role: admin
       - project: nova-tempest7
@@ -3272,7 +3272,7 @@ spec:
     - name: nova-tempestuser8
       description: nova Tempest Test User 8
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest8
         role: admin
       - project: nova-tempest8
@@ -3288,7 +3288,7 @@ spec:
     - name: nova-tempestuser9
       description: nova Tempest Test User 9
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest9
         role: admin
       - project: nova-tempest9
@@ -3304,7 +3304,7 @@ spec:
     - name: nova-tempestuser10
       description: nova Tempest Test User 10
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest10
         role: admin
       - project: nova-tempest10
@@ -3320,7 +3320,7 @@ spec:
     - name: nova-tempestuser11
       description: nova Tempest Test User 11
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest11
         role: admin
       - project: nova-tempest11
@@ -3336,7 +3336,7 @@ spec:
     - name: nova-tempestuser12
       description: nova Tempest Test User 12
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest12
         role: admin
       - project: nova-tempest12
@@ -3352,7 +3352,7 @@ spec:
     - name: nova-tempestuser13
       description: nova Tempest Test User 13
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest13
         role: admin
       - project: nova-tempest13
@@ -3368,7 +3368,7 @@ spec:
     - name: nova-tempestuser14
       description: nova Tempest Test User 14
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest14
         role: admin
       - project: nova-tempest14
@@ -3384,7 +3384,7 @@ spec:
     - name: nova-tempestuser15
       description: nova Tempest Test User 15
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest15
         role: admin
       - project: nova-tempest15
@@ -3400,7 +3400,7 @@ spec:
     - name: nova-tempestuser16
       description: nova Tempest Test User 16
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest16
         role: admin
       - project: nova-tempest16
@@ -3416,7 +3416,7 @@ spec:
     - name: nova-tempestuser17
       description: nova Tempest Test User 17
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest17
         role: admin
       - project: nova-tempest17
@@ -3432,7 +3432,7 @@ spec:
     - name: nova-tempestuser18
       description: nova Tempest Test User 18
       password: {{ required "Missing tempestAdminPassword value!" .Values.tempestAdminPassword | quote }}
-      roles:
+      role_assignments:
       - project: nova-tempest18
         role: admin
       - project: nova-tempest18
