--- a/openstack/vcenter-operator/templates/seed.yaml
+++ b/openstack/vcenter-operator/templates/seed.yaml
@@ -15,7 +15,7 @@ spec:
   - name: {{ .Values.variables.os_project_domain_name }}
     projects:
     - name: {{ .Values.variables.os_project_name }}
-      roles:
+      role_assignments:
       - user: {{ .Values.variables.os_username }}{{ .Values.global.user_suffix }}@{{ .Values.variables.os_user_domain_name }}
         role: admin
       - user: {{ .Values.variables.os_username }}{{ .Values.global.user_suffix }}@{{ .Values.variables.os_user_domain_name }}
