--- a/prometheus-exporters/ns-exporter/templates/seed.yaml
+++ b/prometheus-exporters/ns-exporter/templates/seed.yaml
@@ -10,7 +10,7 @@ spec:
   - monsoon3/domain-ccadmin-seed
 
   roles:
-  - cloud_network_admin
+  - name: cloud_network_admin
 
   domains:
   - name: {{ required ".Values.userDomainName" .Values.userDomainName }}
@@ -18,6 +18,6 @@ spec:
     - name: {{ required ".Values.username missing" .Values.username | quote }}
       description: 'Network namespace exporter'
       password: {{ required ".Values.password missing" .Values.password | quote }}
-      roles:
+      role_assignments:
       - project: {{ required ".Values.projectName missing" .Values.projectName }}@{{ required ".Values.projectDomainName" .Values.projectDomainName }}
         role: cloud_network_admin
