--- a/system/disco/templates/seed.yaml
+++ b/system/disco/templates/seed.yaml
@@ -15,14 +15,14 @@ spec:
         - name: {{ required ".Values.openstack.username missing" .Values.openstack.username }}
           description: DISCO (Designate IngresS Cname Operator)
           password: {{ required ".Values.openstack.password missing" .Values.openstack.password }}
-          roles:
+          role_assignments:
             - project: service
               role:    service
 
     - name: {{ required ".Values.openstack.projectDomainName missing" .Values.openstack.projectDomainName }}
       projects:
         - name: {{ required ".Values.openstack.projectName missing" .Values.openstack.projectName }}
-          roles:
+          role_assignments:
             # Permission to enumerate all projects and domains.
             - user: {{ required ".Values.openstack.username missing" .Values.openstack.username }}@{{ required ".Values.openstack.userDomainName missing" .Values.openstack.userDomainName }}
               role: admin
