--- a/global/chartmuseum/templates/seed.yaml
+++ b/global/chartmuseum/templates/seed.yaml
@@ -16,14 +16,14 @@ spec:
         - name: {{ required ".Values.seed.openstack.userName missing" .Values.seed.openstack.username }}
           description: ChartMuseum Service User
           password: {{ required ".Values.seed.openstack.password missing" .Values.seed.openstack.password | quote }}
-          roles:
+          role_assignments:
             - project: service
               role:    service
 
     - name: {{ required ".Values.seed.openstack.projectDomainName missing" .Values.seed.openstack.projectDomainName }}
       projects:
         - name: {{ required ".Values.seed.openstack.projectName missing" .Values.seed.openstack.projectName }}
-          roles:
+          role_assignments:
             # Permission to write to ccadmin/master containers.
             - user: {{ required ".Values.seed.openstack.userName missing" .Values.seed.openstack.username }}@{{ required ".Values.seed.openstack.userDomainName missing" .Values.seed.openstack.userDomainName }}
               role: swiftoperator
