--- a/openstack/arc/templates/seed.yaml
+++ b/openstack/arc/templates/seed.yaml
@@ -17,8 +17,8 @@ spec:
         region: '{{.Values.region}}'
         url: 'https://arc.{{.Values.region}}.cloud.sap'
   roles:
-  - automation_admin
-  - automation_viewer
+  - name: automation_admin
+  - name: automation_viewer
   domains:
   - name: ccadmin
 {{- if .Values.updatesProxy.createContainers }}
@@ -36,27 +36,27 @@ spec:
 {{- end }}
     groups:
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: automation_admin
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: automation_viewer
         inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: automation_viewer
         inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: automation_viewer
         inherited: true
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: ccadmin
         role: automation_viewer
         inherited: true
@@ -64,27 +64,27 @@ spec:
   - name: bs
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: automation_admin
         inherited: true
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: automation_viewer
         inherited: true
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: automation_viewer
         inherited: true
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: bs
         role: automation_viewer
         inherited: true
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: bs
         role: automation_viewer
         inherited: true
@@ -92,27 +92,27 @@ spec:
   - name: cp
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: automation_admin
         inherited: true
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: automation_viewer
         inherited: true
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: automation_viewer
         inherited: true
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: cp
         role: automation_viewer
         inherited: true
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: cp
         role: automation_viewer
         inherited: true
@@ -120,27 +120,27 @@ spec:
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: automation_admin
         inherited: true
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: automation_viewer
         inherited: true
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: automation_viewer
         inherited: true
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: fsn
         role: automation_viewer
         inherited: true
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: fsn
         role: automation_viewer
         inherited: true
@@ -148,27 +148,27 @@ spec:
   - name: hcm
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: automation_admin
         inherited: true
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: automation_viewer
         inherited: true
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: automation_viewer
         inherited: true
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcm
         role: automation_viewer
         inherited: true
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: hcm
         role: automation_viewer
         inherited: true
@@ -176,27 +176,27 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: automation_admin
         inherited: true
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: automation_viewer
         inherited: true
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: automation_viewer
         inherited: true
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hcp03
         role: automation_viewer
         inherited: true
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: hcp03
         role: automation_viewer
         inherited: true
@@ -204,27 +204,27 @@ spec:
   - name: hec
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: automation_admin
         inherited: true
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: automation_viewer
         inherited: true
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: automation_viewer
         inherited: true
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: hec
         role: automation_viewer
         inherited: true
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: hec
         role: automation_viewer
         inherited: true
@@ -232,27 +232,27 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: automation_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: automation_viewer
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: automation_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: automation_viewer
         inherited: true
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: monsoon3
         role: automation_viewer
         inherited: true
@@ -260,27 +260,27 @@ spec:
   - name: neo
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: automation_admin
         inherited: true
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: automation_viewer
         inherited: true
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: automation_viewer
         inherited: true
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: neo
         role: automation_viewer
         inherited: true
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: neo
         role: automation_viewer
         inherited: true
@@ -288,27 +288,27 @@ spec:
   - name: s4
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: automation_admin
         inherited: true
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: automation_viewer
         inherited: true
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: automation_viewer
         inherited: true
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: s4
         role: automation_viewer
         inherited: true
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: s4
         role: automation_viewer
         inherited: true
@@ -316,27 +316,27 @@ spec:
   - name: wbs
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: automation_admin
         inherited: true
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: automation_viewer
         inherited: true
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: automation_viewer
         inherited: true
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - domain: wbs
         role: automation_viewer
         inherited: true
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - domain: wbs
         role: automation_viewer
         inherited: true
@@ -344,7 +344,7 @@ spec:
   - name: cc3test
     groups:
     - name: CC3TEST_API_SUPPORT
-      roles:
+      role_assignments:
       - domain: cc3test
         role: automation_admin
         inherited: true
