--- a/openstack/barbican/templates/seed.yaml
+++ b/openstack/barbican/templates/seed.yaml
@@ -25,9 +25,12 @@ spec:
   - monsoon3/domain-wbs-seed
 
   roles:
-  - keymanager_viewer
-  - keymanager_admin
-  - cloud_keymanager_admin
+  - name: keymanager_viewer
+    description: Barbican secrets read-only
+  - name: keymanager_admin
+    description: Barbican secrets administration
+  - name: cloud_keymanager_admin
+    description: Barbican secrets cloud-administration
 
   services:
   - name: barbican
@@ -48,7 +51,7 @@ spec:
   - name: Default
     users:
     - name: admin
-      roles:
+      role_assignments:
       - domain: Default
         role: cloud_keymanager_admin
       - project: admin
@@ -56,13 +59,13 @@ spec:
     - name: barbican
       description: 'Barbican Service'
       password: '{{.Values.global.barbican_service_password}}'
-      roles:
+      role_assignments:
       - project: service
         role: service
 
     groups:
     - name: administrators
-      roles:
+      role_assignments:
       - domain: Default
         role: cloud_keymanager_admin
       - project: admin
@@ -71,16 +74,16 @@ spec:
   - name: ccadmin
     projects:
     - name: cloud_admin
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_keymanager_admin
     groups:
     - name: CCADMIN_CLOUD_ADMINS
-      roles:
+      role_assignments:
       - project: cloud_admin
         role: cloud_keymanager_admin
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - project: api_tools
@@ -89,7 +92,7 @@ spec:
         role: keymanager_viewer
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       - project: compute_tools
@@ -98,7 +101,7 @@ spec:
       #  role: keymanager_viewer
       #  inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       - project: network_tools
@@ -107,7 +110,7 @@ spec:
       #  role: keymanager_viewer
       #  inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       - project: storage_tools
@@ -116,7 +119,7 @@ spec:
       #  role: keymanager_viewer
       #  inherited: true
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: ccadmin
@@ -126,35 +129,35 @@ spec:
   - name: bs
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: bs
         role: keymanager_viewer
         inherited: true
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: bs
       #  role: keymanager_viewer
       #  inherited: true
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: bs
       #  role: keymanager_viewer
       #  inherited: true
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: bs
       #  role: keymanager_viewer
       #  inherited: true
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: bs
@@ -164,35 +167,35 @@ spec:
   - name: cp
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: cp
         role: keymanager_viewer
         inherited: true
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: cp
       #  role: keymanager_viewer
       #  inherited: true
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: cp
       #  role: keymanager_viewer
       #  inherited: true
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: cp
       #  role: keymanager_viewer
       #  inherited: true
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: cp
@@ -202,35 +205,35 @@ spec:
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: fsn
         role: keymanager_viewer
         inherited: true
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: fsn
       #  role: keymanager_viewer
       #  inherited: true
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: fsn
       #  role: keymanager_viewer
       #  inherited: true
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: fsn
       #  role: keymanager_viewer
       #  inherited: true
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: fsn
@@ -240,35 +243,35 @@ spec:
   - name: hcm
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: hcm
         role: keymanager_viewer
         inherited: true
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: hcm
       #  role: keymanager_viewer
       #  inherited: true
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: hcm
       #  role: keymanager_viewer
       #  inherited: true
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: hcm
       #  role: keymanager_viewer
       #  inherited: true
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: hcm
@@ -278,35 +281,35 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: hcp03
         role: keymanager_viewer
         inherited: true
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: hcp03
       #  role: keymanager_viewer
       #  inherited: true
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: hcp03
       #  role: keymanager_viewer
       #  inherited: true
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: hcp03
       #  role: keymanager_viewer
       #  inherited: true
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: hcp03
@@ -316,35 +319,35 @@ spec:
   - name: hec
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: hec
         role: keymanager_viewer
         inherited: true
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: hec
       #  role: keymanager_viewer
       #  inherited: true
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: hec
       #  role: keymanager_viewer
       #  inherited: true
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: hec
       #  role: keymanager_viewer
       #  inherited: true
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: hec
@@ -354,39 +357,39 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: cc-demo
         role: keymanager_admin
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: monsoon3
         role: keymanager_viewer
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: monsoon3
       #  role: keymanager_viewer
       #  inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: monsoon3
       #  role: keymanager_viewer
       #  inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: monsoon3
       #  role: keymanager_viewer
       #  inherited: true
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: monsoon3
@@ -396,35 +399,35 @@ spec:
   - name: neo
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: neo
         role: keymanager_viewer
         inherited: true
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: neo
       #  role: keymanager_viewer
       #  inherited: true
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: neo
       #  role: keymanager_viewer
       #  inherited: true
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: neo
       #  role: keymanager_viewer
       #  inherited: true
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: neo
@@ -434,35 +437,35 @@ spec:
   - name: s4
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: s4
         role: keymanager_viewer
         inherited: true
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: s4
       #  role: keymanager_viewer
       #  inherited: true
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: s4
       #  role: keymanager_viewer
       #  inherited: true
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: s4
       #  role: keymanager_viewer
       #  inherited: true
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: s4
@@ -472,35 +475,35 @@ spec:
   - name: wbs
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: keymanager_admin
       - domain: wbs
         role: keymanager_viewer
         inherited: true
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: keymanager_admin
       #- domain: wbs
       #  role: keymanager_viewer
       #  inherited: true
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: keymanager_admin
       #- domain: wbs
       #  role: keymanager_viewer
       #  inherited: true
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: keymanager_admin
       #- domain: wbs
       #  role: keymanager_viewer
       #  inherited: true
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: keymanager_admin
       #- domain: wbs
