--- a/openstack/blackbox/charts/blackbox-tests-regression/templates/project-regression-seed.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-regression/templates/project-regression-seed.yaml
@@ -17,7 +17,7 @@ spec:
 
     groups:
     - name: CC3TEST_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: regression
         role: admin
       - project: regression
@@ -45,7 +45,7 @@ spec:
 
     projects:
     - name: regression
-      roles:
+      role_assignments:
       - user: {{.Values.global.openstack.users.admin.username}}
         role: admin
       - user: {{.Values.global.openstack.users.admin.username}}
