--- a/openstack/hermes/templates/seed.yaml
+++ b/openstack/hermes/templates/seed.yaml
@@ -13,7 +13,7 @@ spec:
     - name: {{ required ".Values.hermes.swift_backup.os_domain is missing" .Values.hermes.swift_backup.os_domain }}
       projects:
       - name: {{ required ".Values.hermes.swift_backup.os_project is missing" .Values.hermes.swift_backup.os_project }}
-        roles:
+        role_assignments:
           - user: {{ required ".Values.hermes.swift_backup.os_user is missing" .Values.hermes.swift_backup.os_user }}
             role: swiftoperator
         swift:
