--- a/openstack/kubernikus/templates/support_seed.yaml
+++ b/openstack/kubernikus/templates/support_seed.yaml
@@ -16,33 +16,33 @@ spec:
     - name: {{ . | lower }}
       groups:
       - name: {{ . | upper }}_API_SUPPORT
-        roles:
+        role_assignments:
         - domain: {{ . | lower }}
           role: kubernetes_admin
           inherited: true
       - name: {{ . | upper }}_COMPUTE_SUPPORT
-        roles:
+        role_assignments:
         - project: compute_support
           role: kubernetes_admin
         - domain: {{ . | lower }}
           role: kubernetes_member
           inherited: true
       - name: {{ . | upper }}_NETWORK_SUPPORT
-        roles:
+        role_assignments:
         - project: network_support
           role: kubernetes_admin
         - domain: {{ . | lower }}
           role: kubernetes_member
           inherited: true
       - name: {{ . | upper }}_STORAGE_SUPPORT
-        roles:
+        role_assignments:
         - project: storage_support
           role: kubernetes_admin
         - domain: {{ . | lower }}
           role: kubernetes_member
           inherited: true
       - name: {{ . | upper }}_SERVICE_DESK
-        roles:
+        role_assignments:
         - project: service_desk
           role: kubernetes_admin
         - domain: {{ . | lower }}
