--- a/openstack/manila/templates/seeds.yaml
+++ b/openstack/manila/templates/seeds.yaml
@@ -26,11 +26,11 @@ spec:
   - monsoon3/domain-wbs-seed
 
   roles:
-  - cloud_sharedfilesystem_admin
-  - cloud_sharedfilesystem_editor
-  - cloud_sharedfilesystem_viewer
-  - sharedfilesystem_admin
-  - sharedfilesystem_viewer
+  - name: cloud_sharedfilesystem_admin
+  - name: cloud_sharedfilesystem_editor
+  - name: cloud_sharedfilesystem_viewer
+  - name: sharedfilesystem_admin
+  - name: sharedfilesystem_viewer
 
   services:
   - name: manila
@@ -64,14 +64,14 @@ spec:
   - name: Default
     groups:
     - name: administrators
-      roles:
+      role_assignments:
       - domain: Default
         role: cloud_sharedfilesystem_admin
       - project: admin
         role: cloud_sharedfilesystem_admin
     users:
     - name: admin
-      roles:
+      role_assignments:
       - domain: Default
         role: cloud_sharedfilesystem_admin
       - project: admin
@@ -79,7 +79,7 @@ spec:
     - name: manila
       description: Manila Service
       password: '{{.Values.global.manila_service_password}}'
-      roles:
+      role_assignments:
       - project: service
         role: service
       - project: service
@@ -88,16 +88,16 @@ spec:
   - name: ccadmin
     projects:
     - name: cloud_admin
-      roles:
+      role_assignments:
       - user: admin@Default
         role: cloud_sharedfilesystem_admin
     groups:
     - name: CCADMIN_CLOUD_ADMINS
-      roles:
+      role_assignments:
       - project: cloud_admin
         role: cloud_sharedfilesystem_admin
     - name: CCADMIN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: cloud_admin
         role: cloud_sharedfilesystem_viewer
       - project: api_support
@@ -108,7 +108,7 @@ spec:
         role: sharedfilesystem_admin
         inherited: true
     - name: CCADMIN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - project: compute_tools
@@ -117,7 +117,7 @@ spec:
         role: sharedfilesystem_viewer
         inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - project: network_tools
@@ -126,7 +126,7 @@ spec:
         role: sharedfilesystem_viewer
         inherited: true
     - name: CCADMIN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: cloud_admin
         role: cloud_sharedfilesystem_editor
       - project: storage_support
@@ -137,7 +137,7 @@ spec:
         role: sharedfilesystem_admin
         inherited: true
     - name: CCADMIN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: ccadmin
@@ -147,35 +147,35 @@ spec:
   - name: bs
     groups:
     - name: BS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: bs
         role: sharedfilesystem_admin
         inherited: true
     - name: BS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: bs
         role: sharedfilesystem_viewer
         inherited: true
     - name: BS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: bs
         role: sharedfilesystem_viewer
         inherited: true
     - name: BS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: bs
         role: sharedfilesystem_admin
         inherited: true
     - name: BS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: bs
@@ -185,35 +185,35 @@ spec:
   - name: cp
     groups:
     - name: CP_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: cp
         role: sharedfilesystem_admin
         inherited: true
     - name: CP_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: cp
         role: sharedfilesystem_viewer
         inherited: true
     - name: CP_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: cp
         role: sharedfilesystem_viewer
         inherited: true
     - name: CP_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: cp
         role: sharedfilesystem_admin
         inherited: true
     - name: CP_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: cp
@@ -223,35 +223,35 @@ spec:
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: fsn
         role: sharedfilesystem_admin
         inherited: true
     - name: FSN_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: fsn
         role: sharedfilesystem_viewer
         inherited: true
     - name: FSN_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: fsn
         role: sharedfilesystem_viewer
         inherited: true
     - name: FSN_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: fsn
         role: sharedfilesystem_admin
         inherited: true
     - name: FSN_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: fsn
@@ -261,35 +261,35 @@ spec:
   - name: hcm
     groups:
     - name: HCM_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: hcm
         role: sharedfilesystem_admin
         inherited: true
     - name: HCM_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: hcm
         role: sharedfilesystem_viewer
         inherited: true
     - name: HCM_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: hcm
         role: sharedfilesystem_viewer
         inherited: true
     - name: HCM_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: hcm
         role: sharedfilesystem_admin
         inherited: true
     - name: HCM_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: hcm
@@ -299,35 +299,35 @@ spec:
   - name: hcp03
     groups:
     - name: HCP03_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: hcp03
         role: sharedfilesystem_admin
         inherited: true
     - name: HCP03_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: hcp03
         role: sharedfilesystem_viewer
         inherited: true
     - name: HCP03_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: hcp03
         role: sharedfilesystem_viewer
         inherited: true
     - name: HCP03_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: hcp03
         role: sharedfilesystem_admin
         inherited: true
     - name: HCP03_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: hcp03
@@ -337,35 +337,35 @@ spec:
   - name: hec
     groups:
     - name: HEC_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: hec
         role: sharedfilesystem_admin
         inherited: true
     - name: HEC_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: hec
         role: sharedfilesystem_viewer
         inherited: true
     - name: HEC_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: hec
         role: sharedfilesystem_viewer
         inherited: true
     - name: HEC_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: hec
         role: sharedfilesystem_admin
         inherited: true
     - name: HEC_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: hec
@@ -375,39 +375,39 @@ spec:
   - name: monsoon3
     groups:
     - name: MONSOON3_DOMAIN_ADMINS
-      roles:
+      role_assignments:
       - project: cc-demo
         role: sharedfilesystem_admin
     - name: MONSOON3_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: monsoon3
         role: sharedfilesystem_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: monsoon3
         role: sharedfilesystem_viewer
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: monsoon3
         role: sharedfilesystem_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: monsoon3
         role: sharedfilesystem_admin
         inherited: true
     - name: MONSOON3_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: monsoon3
@@ -417,35 +417,35 @@ spec:
   - name: neo
     groups:
     - name: NEO_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: neo
         role: sharedfilesystem_admin
         inherited: true
     - name: NEO_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: neo
         role: sharedfilesystem_viewer
         inherited: true
     - name: NEO_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: neo
         role: sharedfilesystem_viewer
         inherited: true
     - name: NEO_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: neo
         role: sharedfilesystem_admin
         inherited: true
     - name: NEO_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: neo
@@ -455,35 +455,35 @@ spec:
   - name: s4
     groups:
     - name: S4_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: s4
         role: sharedfilesystem_admin
         inherited: true
     - name: S4_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: s4
         role: sharedfilesystem_viewer
         inherited: true
     - name: S4_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: s4
         role: sharedfilesystem_viewer
         inherited: true
     - name: S4_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: s4
         role: sharedfilesystem_admin
         inherited: true
     - name: S4_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: s4
@@ -493,35 +493,35 @@ spec:
   - name: wbs
     groups:
     - name: WBS_API_SUPPORT
-      roles:
+      role_assignments:
       - project: api_support
         role: sharedfilesystem_admin
       - domain: wbs
         role: sharedfilesystem_admin
         inherited: true
     - name: WBS_COMPUTE_SUPPORT
-      roles:
+      role_assignments:
       - project: compute_support
         role: sharedfilesystem_admin
       - domain: wbs
         role: sharedfilesystem_viewer
         inherited: true
     - name: WBS_NETWORK_SUPPORT
-      roles:
+      role_assignments:
       - project: network_support
         role: sharedfilesystem_admin
       - domain: wbs
         role: sharedfilesystem_viewer
         inherited: true
     - name: WBS_STORAGE_SUPPORT
-      roles:
+      role_assignments:
       - project: storage_support
         role: sharedfilesystem_admin
       - domain: wbs
         role: sharedfilesystem_admin
         inherited: true
     - name: WBS_SERVICE_DESK
-      roles:
+      role_assignments:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: wbs
