--- a/openstack/nannies/templates/seed.yaml
+++ b/openstack/nannies/templates/seed.yaml
@@ -23,7 +23,7 @@ spec:
   - name: ccadmin
     projects:
     - name: cloud_admin
-      roles:
+      role_assignments:
       # permission to enumerate all projects and domains
       - user: vcenter_nanny@Default
         role: admin
